--- a/tallerangularmaterial/package.json
+++ b/tallerangularmaterial/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@swimlane/ngx-charts": "^11.1.0",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
